[gd_scene load_steps=57 format=3 uid="uid://b8adw208onxum"]

[ext_resource type="PackedScene" uid="uid://bjhx0i1k84ymc" path="res://resources/playable_character/mage.tscn" id="1_41vyr"]
[ext_resource type="Script" path="res://scripts/test.gd" id="1_fqtb5"]
[ext_resource type="Texture2D" uid="uid://c7qjuf52l6tj" path="res://resources/assets/keys/w_key1.png" id="3_givne"]
[ext_resource type="Texture2D" uid="uid://crtwfpaeplwqi" path="res://resources/assets/keys/w_key2.png" id="4_s4i37"]
[ext_resource type="Texture2D" uid="uid://cd28qcfbol705" path="res://resources/assets/keys/a_key1.png" id="5_ta1g0"]
[ext_resource type="Texture2D" uid="uid://kb305uacyb6x" path="res://resources/assets/keys/a_key2.png" id="6_er21e"]
[ext_resource type="Texture2D" uid="uid://b4d6ef35wavpl" path="res://resources/assets/keys/d_key1.png" id="7_w32tb"]
[ext_resource type="Texture2D" uid="uid://hyiuprgf3lok" path="res://resources/assets/keys/d_key2.png" id="8_qqxfp"]
[ext_resource type="Texture2D" uid="uid://dclhf6vcae8lo" path="res://resources/assets/keys/s_key1.png" id="9_rk3xt"]
[ext_resource type="Texture2D" uid="uid://dt71hghqdvq3w" path="res://resources/assets/keys/s_key2.png" id="10_g0cpc"]
[ext_resource type="Texture2D" uid="uid://b5taydlj1rwpc" path="res://resources/assets/keys/space_key1.png" id="11_23vpr"]
[ext_resource type="Texture2D" uid="uid://kopjh22lwlfb" path="res://resources/assets/keys/space_key2.png" id="12_sho04"]
[ext_resource type="Texture2D" uid="uid://dkbkev8f1507r" path="res://resources/assets/keys/mouse1.png" id="13_1b5jf"]
[ext_resource type="Texture2D" uid="uid://bucq0h6d1ijya" path="res://resources/assets/keys/mouse2.png" id="14_otafw"]
[ext_resource type="Texture2D" uid="uid://bdmpoob8a4tao" path="res://resources/assets/keys/mouse3.png" id="15_1u1dv"]
[ext_resource type="Texture2D" uid="uid://crhkanv22hxir" path="res://resources/assets/tutorial_powers/POWERS1.png" id="16_im4js"]
[ext_resource type="Texture2D" uid="uid://cgocq4mupnq0u" path="res://resources/assets/tutorial_powers/POWERS2.png" id="17_0whdy"]
[ext_resource type="Texture2D" uid="uid://c17ljoyivhf1b" path="res://resources/assets/tutorial_powers/POWERS3.png" id="18_nx3mv"]
[ext_resource type="Texture2D" uid="uid://c1kayla4kvgbc" path="res://resources/assets/tutorial_powers/POWERS4.png" id="19_gml6l"]

[sub_resource type="BoxShape3D" id="BoxShape3D_up0jl"]
size = Vector3(2.95445, 0.17468, 2.57323)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3lep4"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_im82a"]
animation = &"Interact"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mhqd8"]
animation = &"Jump_Full_Long"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_upn33"]
animation = &"Running_A"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fp0i8"]
animation = &"Running_B"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_damox"]
animation = &"Running_Strafe_Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e02iy"]
animation = &"Running_Strafe_Right"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_awoxa"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kwi4j"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gjj0j"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vveqr"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_iv6dq"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_87gfq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0qj33"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fkw11"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hytph"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tmrlb"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ktfyk"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_84daj"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_eyk33"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_lat04"]
states/Idle/node = SubResource("AnimationNodeAnimation_3lep4")
states/Idle/position = Vector2(314, 100)
states/Interact/node = SubResource("AnimationNodeAnimation_im82a")
states/Interact/position = Vector2(532, 20)
states/Jump_Full_Long/node = SubResource("AnimationNodeAnimation_mhqd8")
states/Jump_Full_Long/position = Vector2(532, 100)
states/Running_A/node = SubResource("AnimationNodeAnimation_upn33")
states/Running_A/position = Vector2(314, 20)
states/Running_B/node = SubResource("AnimationNodeAnimation_fp0i8")
states/Running_B/position = Vector2(314, 176)
states/Running_Strafe_Left/node = SubResource("AnimationNodeAnimation_damox")
states/Running_Strafe_Left/position = Vector2(107, 176)
states/Running_Strafe_Right/node = SubResource("AnimationNodeAnimation_e02iy")
states/Running_Strafe_Right/position = Vector2(532, 176)
states/Start/position = Vector2(107, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_awoxa"), "Idle", "Running_A", SubResource("AnimationNodeStateMachineTransition_kwi4j"), "Running_A", "Idle", SubResource("AnimationNodeStateMachineTransition_gjj0j"), "Idle", "Jump_Full_Long", SubResource("AnimationNodeStateMachineTransition_vveqr"), "Jump_Full_Long", "Idle", SubResource("AnimationNodeStateMachineTransition_iv6dq"), "Idle", "Running_B", SubResource("AnimationNodeStateMachineTransition_87gfq"), "Running_B", "Idle", SubResource("AnimationNodeStateMachineTransition_0qj33"), "Idle", "Running_Strafe_Right", SubResource("AnimationNodeStateMachineTransition_fkw11"), "Running_Strafe_Right", "Idle", SubResource("AnimationNodeStateMachineTransition_hytph"), "Idle", "Running_Strafe_Left", SubResource("AnimationNodeStateMachineTransition_tmrlb"), "Running_Strafe_Left", "Idle", SubResource("AnimationNodeStateMachineTransition_ktfyk"), "Idle", "Interact", SubResource("AnimationNodeStateMachineTransition_84daj"), "Interact", "Idle", SubResource("AnimationNodeStateMachineTransition_eyk33")]

[sub_resource type="Animation" id="Animation_s6m1q"]
resource_name = "Idle"

[sub_resource type="Animation" id="Animation_si13a"]
resource_name = "Interact"

[sub_resource type="Animation" id="Animation_npfp6"]
resource_name = "Jump_Full_Long"

[sub_resource type="Animation" id="Animation_silwr"]
resource_name = "Running_A"

[sub_resource type="Animation" id="Animation_y17ch"]
resource_name = "Running_B"

[sub_resource type="Animation" id="Animation_yus50"]
resource_name = "Running_Strafe_Left"

[sub_resource type="Animation" id="Animation_tw0yw"]
resource_name = "Running_Strafe_Right"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3xn42"]
_data = {
"Idle": SubResource("Animation_s6m1q"),
"Interact": SubResource("Animation_si13a"),
"Jump_Full_Long": SubResource("Animation_npfp6"),
"Running_A": SubResource("Animation_silwr"),
"Running_B": SubResource("Animation_y17ch"),
"Running_Strafe_Left": SubResource("Animation_yus50"),
"Running_Strafe_Right": SubResource("Animation_tw0yw")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_iodin"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_givne")
}, {
"duration": 1.0,
"texture": ExtResource("4_s4i37")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_rpcqs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ta1g0")
}, {
"duration": 1.0,
"texture": ExtResource("6_er21e")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_s6dep"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_w32tb")
}, {
"duration": 1.0,
"texture": ExtResource("8_qqxfp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ocfmi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_rk3xt")
}, {
"duration": 1.0,
"texture": ExtResource("10_g0cpc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_t7dff"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_23vpr")
}, {
"duration": 1.0,
"texture": ExtResource("12_sho04")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ef6nb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_1b5jf")
}, {
"duration": 1.0,
"texture": ExtResource("14_otafw")
}, {
"duration": 1.0,
"texture": ExtResource("15_1u1dv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_pyfuj"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": ExtResource("16_im4js")
}, {
"duration": 2.0,
"texture": ExtResource("17_0whdy")
}, {
"duration": 2.0,
"texture": ExtResource("18_nx3mv")
}, {
"duration": 2.0,
"texture": ExtResource("19_gml6l")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[node name="test" type="Node3D"]
script = ExtResource("1_fqtb5")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.7446, 0)

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_up0jl")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 3.4179e-08, 2.96591e-08, -3.1999e-08, 0.997503, -0.0706269, -3.1999e-08, 0.0706269, 0.997503, 0, 1.70673, 4.60884)

[node name="Node3D" type="Node3D" parent="."]

[node name="Mage" parent="Node3D" instance=ExtResource("1_41vyr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.207364, 0)

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_lat04")
anim_player = NodePath("../AnimationPlayer")
active = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3xn42")
}

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="w_key" type="AnimatedSprite2D" parent="Control"]
position = Vector2(160, 64)
sprite_frames = SubResource("SpriteFrames_iodin")

[node name="a_key" type="AnimatedSprite2D" parent="Control"]
position = Vector2(80, 144)
sprite_frames = SubResource("SpriteFrames_rpcqs")

[node name="d_key" type="AnimatedSprite2D" parent="Control"]
position = Vector2(240, 144)
sprite_frames = SubResource("SpriteFrames_s6dep")

[node name="s_key" type="AnimatedSprite2D" parent="Control"]
position = Vector2(160, 144)
sprite_frames = SubResource("SpriteFrames_ocfmi")

[node name="space_key" type="AnimatedSprite2D" parent="Control"]
position = Vector2(166, 224)
scale = Vector2(1.36936, 1.32422)
sprite_frames = SubResource("SpriteFrames_t7dff")

[node name="mouse" type="AnimatedSprite2D" parent="Control"]
position = Vector2(382, 148)
sprite_frames = SubResource("SpriteFrames_ef6nb")

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 497.0
offset_top = 549.0
offset_right = 586.0
offset_bottom = 571.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Placeholder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 44.0
offset_top = 544.0
offset_right = 126.0
offset_bottom = 589.0
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="powers" type="AnimatedSprite2D" parent="Control"]
visible = false
position = Vector2(980, 321)
scale = Vector2(2.42188, 2.42188)
sprite_frames = SubResource("SpriteFrames_pyfuj")
frame = 3
frame_progress = 1.0

[node name="Label2" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 895.0
offset_top = 5.0
offset_right = 1074.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 48
text = "Powers"

[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
